# azure-a2a-main

./: .coverage  .coveragerc  .env  .env.example  .env.sample  .gitignore  AGENT_REGISTRY_MIGRATION_COMPLETE.md  BING_GROUNDING_SDK_ISSUE.md  CI-CD-GUIDE.md  CONTEXT_BLOAT_FIX.md  COVERAGE_LIMITATIONS.md  COVERAGE_READY.md  COVERAGE_TESTING.md  COVERAGE_TESTING_GUIDE.md  CUSTOM_MCP_CLIENT_IMPLEMENTATION.md  DATABASE_MIGRATION_COMPLETE.md  DEAD_CODE_REPORT.md  DEPLOYMENT.md  FIXES-APPLIED.md  IMAGE_DISPLAY_FIX_EXPLANATION.md  IMAGE_GENERATOR_DEPLOYMENT_FIX.md  IMPLEMENTATION_SUMMARY.md  MEMORY_TOGGLE_UPDATE.md  Makefile  NEW_SDK_MIGRATION.md  PARALLEL_WORKFLOW_GUIDE.md  PRE_IMPLEMENTATION_REVIEW.md  RATE_LIMIT_FIX.md  README.md  README_AZURE.md  RESPONSES_API_MIGRATION_PLAN.md  RESPONSES_API_PROGRESS.md  SCHEDULED_WORKFLOWS_COLD_START_FIX.md  SCHEDULED_WORKFLOWS_SUMMARY.md  TEAMS_AGENT_COMPLETE.md  VISUAL_WORKFLOW_DESIGNER.md  VISUAL_WORKFLOW_UI_GUIDE.md  a2as.yaml  agents.MD  analyze_coverage.py  (+32 more)
.claude/: CLAUDE.md  settings.json
.claude/skills/: a2a-agent-creator.skill
.github/workflows/: deploy-azure.yml
Visualizer/voice-a2a-fabric/: .dockerignore  .env.local.example  .gitignore  AGENTS.MD  Dockerfile  INTEGRATION_SUMMARY.md  NETWORK_OUTAGE_SUMMARY.md  README.md  SETUP_GUIDE.md  TESTING.md  TESTING_NETWORK_OUTAGE.md  TESTING_VOICE_LIVE.md  VOICE_LIVE_INTEGRATION.md  next.config.mjs  package-lock.json
backend/: .coverage  .dockerignore  Dockerfile  Dockerfile.websocket  README.md  TESTING_SCHEDULED_WORKFLOWS.md  __init__.py  backend_production.py  check_agent_urls.py  check_all_memory.py  check_azure_memory.py  check_doc.py  check_memory_index.py  check_memory_size.py  config.py  doc_output.txt  inspect_invoice_docs.py  list_session_files.py  log_config.py  requirements.txt  start_websocket.py  test_agent_registry_database.py  test_azure_agents.py  test_azure_scheduled_workflow.py  test_hitl_clean.py  test_hitl_full.py  test_hitl_full_workflow.py  test_hitl_scenarios.py  test_schedule_via_api.py  test_scheduled_workflow_execution.py  test_teams_hitl_simple.py  test_unified_registry.py  test_workflow_database.py  update_test77_workflow.py
backend/config/: __init__.py  settings.py
backend/data/: agent_files_registry.json  agent_registry.json  agent_registry_prod.json  agent_registry_unified.json  merge_agent_registries.py  schedule_run_history.json  scheduled_workflows.json  sessions.json  users.json  workflows.json
backend/database/: active_workflows_schema.sql  agent_files_schema.sql  agent_schema.sql  chat_history_schema.sql  deploy_agent_files_schema.py  deploy_agent_schema.py  deploy_schedule_run_history_schema.py  migrate_agent_files.py  migrate_agent_names.sql  migrate_agents.py  migrate_schedule_run_history.py  migrate_scheduled_workflows.py  migrate_users.py  schema.sql  (+8 more)
contoso_agents/: CUST005_TEST_SCENARIO.md  ROGERS_WORKFLOW_ALL_AGENTS.md
contoso_agents/modem_check_agent/: Dockerfile  README.md  __main__.py  foundry_agent.py  foundry_agent_executor.py  pyproject.toml
contoso_agents/modem_check_agent/documents/: modem_database.json
contoso_agents/network_performance_agent/: .env.example  Dockerfile  README.md  __main__.py  conf.yaml  foundry_agent.py  foundry_agent_executor.py  pyproject.toml  tools.py
contoso_agents/network_performance_agent/dataagents/: main.py
contoso_agents/network_performance_agent/documents/: network_database.json
contoso_agents/network_performance_agent/rogers_network_performance_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
contoso_agents/network_performance_agent/utils/: __init__.py
frontend/: .dockerignore  DOCKER.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  next.config.mjs  package-lock.json  package.json  test-playwright-mcp.js
frontend_light/: Dockerfile
frontend_mobile/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
remote_agents/: README.md
remote_agents/azurefoundry_GitHub/: Dockerfile  __main__.py  foundry_agent.py  foundry_agent_executor.py  pyproject.toml
remote_agents/azurefoundry_GoogleMaps/: Dockerfile  __main__.py  foundry_agent.py  foundry_agent_executor.py  pyproject.toml
remote_agents/azurefoundry_GoogleMaps/utils/: self_registration.py
remote_agents/azurefoundry_StockMarket/: Dockerfile  __main__.py  foundry_agent.py  foundry_agent_executor.py  pyproject.toml
remote_agents/azurefoundry_TimeSeries/: Dockerfile  __main__.py  foundry_agent.py  foundry_agent_executor.py  pyproject.toml
remote_agents/azurefoundry_image_analysis/: .env.example  Dockerfile  README.md  __main__.py  foundry_agent.py  foundry_agent_executor.py  pyproject.toml
remote_agents/azurefoundry_image_analysis/utils/: self_registration.py
remote_agents/azurefoundry_reporter/: README.md  __main__.py  foundry_agent.py  foundry_agent_executor.py  pyproject.toml
remote_agents/azurefoundry_reporter/documents/: REPORT_GUIDE.md
remote_agents/azurefoundry_supplier/: Dockerfile  __main__.py  foundry_agent.py  foundry_agent_executor.py  pyproject.toml  seed_database.py
remote_agents/azurefoundry_teams/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __main__.py  foundry_agent.py  foundry_agent_executor.py  pyproject.toml
remote_agents/azurefoundry_twilio2/: README.md  __main__.py  foundry_agent.py  foundry_agent_executor.py  pyproject.toml
remote_agents/azurefoundry_twilio2/utils/: self_registration.py
remote_agents/azurefoundry_video/: README.md  __main__.py  foundry_agent.py  foundry_agent_executor.py  pyproject.toml
remote_agents/azurefoundry_video/utils/: self_registration.py
scripts/: README.md  apply_parallel_fixes.py  deploy-sora2.sh  setup-storage-permissions.ps1  setup-storage-permissions.sh  start_all_agents.ps1  start_all_agents.sh  start_backend.ps1  start_backend.py  start_backend.sh  start_devtunnel_host.sh  start_frontend.ps1  start_frontend.sh  start_remote_agents.sh
utils/: ARCHITECTURE_ANALYSIS.md  ASYNC_FUNCTION_CALLING_FIX.md  ASYNC_QUEUE_GUIDE.md  PYTHON_SDK_PATTERN_IMPLEMENTATION.md  VOICE_LIVE_FIX.md
(+632 files in other folders)
