[project]
name = "aifoundry-supplier-agent"
version = "0.1.0"
description = "An intelligent supplier agent that provides product catalog lookup, pricing, availability, lead times, and product recommendations from a PostgreSQL database."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk[http-server]>=0.2.6",
    "openai>=1.0.0",
    "azure-identity>=1.23.0",
    "uvicorn>=0.34.2",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "starlette>=0.35.0",
    "httpx>=0.25.0",
    "gradio>=4.0.0",
    "pandas>=2.0.0",
    "asyncpg>=0.30.0",
]
